--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 .externalNativeBuild
 .cxx
 local.properties
+/D:\Workspace\Android\AndroidApp\MyAndroidApp\app\src\main\java\com\example\myandroidapp\learn/*
+/D:\Workspace\Android\AndroidApp\MyAndroidApp\app\src\main\java\com\example\myandroidapp\ui\UiLearrn/*
