--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAnCoSo3"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".ui.testfirebase.UpdateCourse"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_update_course"-->
+<!--            android:theme="@style/Theme.DoAnCoSo3" />-->
+<!--        <activity-->
+<!--            android:name=".ui.testfirebase.CourseDetailsActivity"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_course_details"-->
+<!--            android:theme="@style/Theme.DoAnCoSo3" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
