--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,16 +17,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAnCoSo3"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".ui.testfirebase.UpdateCourse"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_update_course"-->
-<!--            android:theme="@style/Theme.DoAnCoSo3" />-->
-<!--        <activity-->
-<!--            android:name=".ui.testfirebase.CourseDetailsActivity"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_course_details"-->
-<!--            android:theme="@style/Theme.DoAnCoSo3" />-->
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/network_security_config" />
+        <!-- <activity -->
+        <!-- android:name=".ui.testfirebase.UpdateCourse" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_update_course" -->
+        <!-- android:theme="@style/Theme.DoAnCoSo3" /> -->
+        <!-- <activity -->
+        <!-- android:name=".ui.testfirebase.CourseDetailsActivity" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_course_details" -->
+        <!-- android:theme="@style/Theme.DoAnCoSo3" /> -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
